<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">MyApp</string>
    <string name="weather">Weather</string>

    <string name="view_weather">Watch weather</string>
    <string name="temp" translatable="false">25 C</string>
    <string name="wind" translatable="false">8 m/s</string>
    <string name="humidity" translatable="false">85%</string>
    <string name="tempNameCheckBox">Temperature</string>
    <string name="windNameCheckBox">Wind</string>
    <string name="humidityNameCheckBox">Humidity</string>
    <string name="cityNotInput">You dont input city</string>
    <string name="no_data">No data</string>
    <string name="place_not_found">Place not found</string>
    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false" >&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>

    <string-array name="cityList">
        <item>Moscow</item>
        <item>Tula</item>
        <item>Sochi</item>
        <item>Vladivostok</item>
    </string-array>

    <string-array name="windList" translatable="false">
        <item>8 m/s</item>
        <item>12 m/s</item>
        <item>5 m/s</item>
        <item>18 m/s</item>
    </string-array>

    <string-array name="humidityList" translatable="false">
        <item>85 %</item>
        <item>80 %</item>
        <item>90 %</item>
        <item>95 %</item>
    </string-array>

    <string-array name="tempList" translatable="false">
        <item>12 C</item>
        <item>15 C</item>
        <item>30 C</item>
        <item>25 C</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_city">Input city</string>
    <string name="day_night_mode">Day/Night</string>

</resources>