<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/weather"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViev1"
        android:text="@string/weather"
        style="@style/StyleOfTitleTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/City"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_city"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/tempCb"
            style="@style/StyleOfCheckBox"
            android:text="@string/tempNameCheckBox" />

        <CheckBox
            android:id="@+id/windCb"
            style="@style/StyleOfCheckBox"
            android:text="@string/windNameCheckBox" />

        <CheckBox
            android:id="@+id/humidityCb"
            style="@style/StyleOfCheckBox"
            android:text="@string/humidityNameCheckBox" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/viewWatherBtn"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/view_weather"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>